--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -27,7 +28,7 @@
     </parent>
 
     <groupId>org.apache.camel</groupId>
-    <version>0.1</version>
+    <version>1.0.0-SNAPSHOT</version>
     <artifactId>camel-upgrade-recipes</artifactId>
 
     <name>Camel Upgrades Recipes</name>
@@ -478,8 +479,4 @@
             </build>
         </profile>
     </profiles>
-
-  <scm>
-    <tag>camel-upgrade-recipes-0.1</tag>
-  </scm>
 </project>
