--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <connection>scm:git:http://gitbox.apache.org/repos/asf/camel-upgrade-recipes.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/camel-upgrade-recipes.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=camel-upgrade-recipes.git;a=summary</url>
-        <tag>HEAD</tag>
+        <tag>0.0.1</tag>
     </scm>
     <issueManagement>
         <system>jira</system>
