--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </parent>
 
     <groupId>org.apache.camel</groupId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <artifactId>camel-upgrade-recipes</artifactId>
 
     <name>Camel Upgrades Recipes</name>
@@ -68,7 +68,7 @@
         <connection>scm:git:http://gitbox.apache.org/repos/asf/camel-upgrade-recipes.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/camel-upgrade-recipes.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=camel-upgrade-recipes.git;a=summary</url>
-        <tag>0.1</tag>
+        <tag>0.0.1</tag>
     </scm>
     <issueManagement>
         <system>jira</system>
