--- a/src/main/resources/META-INF/rewrite/4.4.yaml
+++ b/src/main/resources/META-INF/rewrite/4.4.yaml
@@ -24,31 +24,31 @@
 #####
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel44.CamelMigrationRecipe
+name: org.apache.camel.upgrade.camel44.CamelMigrationRecipe
 displayName: Migrates `camel 4.0` application to `camel 4.4`
 description: Migrates `camel 4.0` application to `camel 4.4`.
 recipeList:
   # to camel 4.1
-  - org.apache.camel.updates.camel41.CamelCoreRecipe
-  - org.apache.camel.updates.camel41.XmlDslRecipe
-  - org.apache.camel.updates.camel41.YamlDslRecipe
-  - org.apache.camel.updates.camel41.TracingTag
+  - org.apache.camel.upgrade.camel41.CamelCoreRecipe
+  - org.apache.camel.upgrade.camel41.XmlDslRecipe
+  - org.apache.camel.upgrade.camel41.YamlDslRecipe
+  - org.apache.camel.upgrade.camel41.TracingTag
   # to camel 4.2
-  - org.apache.camel.updates.camel42.CamelMainDebugger
-  - org.apache.camel.updates.camel42.CamelSagaRecipe
+  - org.apache.camel.upgrade.camel42.CamelMainDebugger
+  - org.apache.camel.upgrade.camel42.CamelSagaRecipe
   # to camel 4.3
-  - org.apache.camel.updates.camel43.StateRepository
-  - org.apache.camel.updates.camel43.CamelResequenceEIPXmlRecipe
-  - org.apache.camel.updates.camel43.CamelThrottleEIPRecipe
-  - org.apache.camel.updates.camel43.KafkaMetadata
+  - org.apache.camel.upgrade.camel43.StateRepository
+  - org.apache.camel.upgrade.camel43.CamelResequenceEIPXmlRecipe
+  - org.apache.camel.upgrade.camel43.CamelThrottleEIPRecipe
+  - org.apache.camel.upgrade.camel43.KafkaMetadata
   # to camel 4.4
-  - org.apache.camel.updates.camel44.CamelCoreRecipe
-  - org.apache.camel.updates.camel44.RouteControllerProperties
-  - org.apache.camel.updates.camel44.DefaultJsonSchemaLoader
+  - org.apache.camel.upgrade.camel44.CamelCoreRecipe
+  - org.apache.camel.upgrade.camel44.RouteControllerProperties
+  - org.apache.camel.upgrade.camel44.DefaultJsonSchemaLoader
 ---
 #https://camel.apache.org/manual/camel-4x-upgrade-guide-4_1.html#_camel_tracing
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel41.TracingTag
+name: org.apache.camel.upgrade.camel41.TracingTag
 displayName: Tag Enum has been deprecated
 description: The Tag Enum containing constants for tagging spans has been deprecated. Instead, use constants from the TagConstants.
 recipeList:
@@ -58,7 +58,7 @@ recipeList:
 ---
 #https://camel.apache.org/manual/camel-4x-upgrade-guide-4_2.html#_camel_main
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel42.CamelMainDebugger
+name: org.apache.camel.upgrade.camel42.CamelMainDebugger
 displayName: The option camel.main.debugger has been renamed
 description: The option camel.main.debugger has been renamed to camel.debug.enabled.
 recipeList:
@@ -69,7 +69,7 @@ recipeList:
 ---
 #https://camel.apache.org/manual/camel-4x-upgrade-guide-4_3.html#_camel_core
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel43.StateRepository
+name: org.apache.camel.upgrade.camel43.StateRepository
 displayName: MemoryStateRepository and FileStateRepository were moved to another package and library
 description: Moved classes MemoryStateRepository and FileStateRepositor from camel-base-engine to  camel-support.
 recipeList:
@@ -82,7 +82,7 @@ recipeList:
 ---
 #https://camel.apache.org/manual/camel-4x-upgrade-guide-4_3.html#_camel_kafka_2
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel43.KafkaMetadata
+name: org.apache.camel.upgrade.camel43.KafkaMetadata
 displayName: The header name for the List metadata has changed
 description: The header name for the List metadata has changed also the dsl method for metadata changed.
 recipeList:
@@ -95,7 +95,7 @@ recipeList:
 ---
 #https://camel.apache.org/manual/camel-4x-upgrade-guide-4_4.html#_camel_json_validator
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel44.DefaultJsonSchemaLoader
+name: org.apache.camel.upgrade.camel44.DefaultJsonSchemaLoader
 displayName: Replace deprecated DefaultJsonSchemaLoader with DefaultJsonUriSchemaLoader
 description: Replaces deprecated class with its successor.
 recipeList:
@@ -105,7 +105,7 @@ recipeList:
 ---
 #https://camel.apache.org/manual/camel-4x-upgrade-guide-4_4.html#_camel_main
 type: specs.openrewrite.org/v1beta/recipe
-name: org.apache.camel.updates.camel44.RouteControllerProperties
+name: org.apache.camel.upgrade.camel44.RouteControllerProperties
 displayName: Replace 'camel.main.routeController' with `camel.routecontroller'
 recipeList:
   - org.openrewrite.properties.ChangePropertyKey:
@@ -114,9 +114,9 @@ recipeList:
   - org.openrewrite.properties.ChangePropertyKey:
       oldPropertyKey: camel.main.route-controller-supervise-enabled
       newPropertyKey: camel.routeController.enabled
-  - org.apache.camel.updates.customRecipes.ChangePropertyKeyWithCaseChange:
+  - org.apache.camel.upgrade.customRecipes.ChangePropertyKeyWithCaseChange:
       oldPropertyKey: camel.main.routeController(.*)
       newPrefix: camel.routeController.
-  - org.apache.camel.updates.customRecipes.ChangePropertyKeyWithCaseChange:
+  - org.apache.camel.upgrade.customRecipes.ChangePropertyKeyWithCaseChange:
       oldPropertyKey: camel.main.route-controller-(.*)
       newPrefix: camel.routeController.
