--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <version>33</version>
     </parent>
 
-    <groupId>org.apache.camel</groupId>
+    <groupId>org.apache.camel.upgrade</groupId>
     <version>4.8.0-SNAPSHOT</version>
     <artifactId>camel-upgrade-recipes</artifactId>
 
